# CybrCommit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
ai_commit/: __init__.py  __main__.py  cli.py  config.py  diff_parser.py  generator.py
cybrcommit/: __init__.py  __main__.py  cli.py  config.py  diff_parser.py  generator.py
