[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CybrCommit"
version = "1.0.0"
description = "🤖 AI-powered git commit message generator"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Cybrflux"}]
keywords = ["git", "commit", "ai", "cli", "conventional-commits", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
ai = ["openai>=1.0.0", "anthropic>=0.18.0"]
dev = ["pytest>=7.0", "pytest-cov", "black", "isort", "mypy", "ruff"]

[project.scripts]
CybrCommit = "cybrcommit.cli:main"

[project.urls]
Homepage = "https://github.com/M4ST3R-C0NTR0L/CybrCommit"
Repository = "https://github.com/M4ST3R-C0NTR0L/CybrCommit"
Issues = "https://github.com/M4ST3R-C0NTR0L/CybrCommit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cybrcommit*"]

[tool.setuptools.package-data]
ai_commit = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
